<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="title_activity_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message</string>
    <string name="action_message">Action Message</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="money_symbol">₹</string>
    <string name="save">save</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="choose_category">Choose Category</string>
    <string name="title_req">Title Required</string>
    <string name="amount_req">Amount is Required</string>
    <string name="date_req">Date is Required</string>
    <string name="cat_req">Category is Required</string>
    <string name="problem_inserting_trans">Problem while inserting transaction</string>
    <string name="trans_inserted">Transaction Inserted</string>
    <string name="select_category_type">Select Category Type</string>
    <string name="problem_ins_cat">Problem while inserting category</string>
    <string name="cat_inserted">Category Inserted</string>
    <string name="update">Update</string>
    <string name="problem_open_trans">Problem opening transaction</string>
    <string name="prob_deleting_trans">Problem occurred while deleting transaction</string>
    <string name="trans_deleted">Transaction deleted</string>
    <string name="statistics">Statistics</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="others">Others</string>
    <string name="categories">Categories</string>
    <string name="no_traans_details_available">Your Transaction details appear here \nNo Transaction details available yet \nPlease use + icon in the bottom bar\nto add your income / expense </string>
    <string name="no_traans_details_in_frag">Your Transaction details appear here \nNo Transaction details available yet \nPlease use + or - icon in the bottom bar\nto add your income or expense respectively</string>
    <string name="logout">Logout</string>
    <string name="balance_0_0">Balance 0.0</string>
    <string name="no_cat">No Category to display\nPlease use the + icon to add</string>
    <string name="problem_open_catergory">Problem occurred while opening category</string>
    <string name="edit_category">Edit Category</string>
    <string name="add_category">Add Category</string>
    <string name="cat_deleted">Category deleted</string>
    <string name="prob_deleting_cat">Problem occurred while deleting category</string>
    <string name="cat_delete_confirm">Are you sure want to delete this category\nDeleting this category will delete all transaction associated with it</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit_trans">Edit Transaction</string>
    <string name="add_trans">Add Transaction</string>
    <string name="category_type">Category Type</string>
    <string name="transaction">Transaction</string>

</resources>
