<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:checkableBehavior="single"
        android:title="@string/statistics">
        <menu>
            <item
                android:id="@+id/menu_home_drawer_daily"
                android:title="@string/daily"

                />
            <item
                android:id="@+id/menu_home_drawer_weekly"
                android:title="@string/weekly" />
            <item
                android:id="@+id/menu_home_drawer_monthly"
                android:title="@string/monthly" />
        </menu>

    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/menu_home_drawer_categories"
                android:title="@string/categories" />
        </menu>
    </item>
</menu>


