<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="fire.half_blood_prince.myapplication.login.LoginFragment">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/fm_login_til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fm_login_tip_email"
            style="@style/LoginFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fm_login_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/fm_login_tip_password"
            style="@style/LoginFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fm_login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/login"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
        android:textSize="14sp" />

</LinearLayout>
