<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/la_df_tp_img_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_clear_black_24dp"
                android:tint="@android:color/white"
                tools:ignore="ContentDescription" />

            <TextView

                android:id="@+id/la_df_tp_tv_toolbar_title"
                style="@style/CustomToolbarTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:text="Transaction"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/la_df_tp_tv_action"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/la_df_tp_til_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/la_df_tp_tie_title"
                    style="@style/NormalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/la_df_tp_til_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/la_df_tp_tie_amount"
                    style="@style/NormalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/la_df_tp_til_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/la_df_tp_tie_notes"
                    style="@style/NormalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/notes_optional"
                    android:inputType="text"
                    android:maxLines="3"
                    android:minLines="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/la_df_tp_til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/la_df_tp_tie_date"
                    style="@style/NormalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/date" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/la_df_tp_til_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="0.8">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/la_df_tp_tie_category"
                        style="@style/NormalTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/category" />
                </android.support.design.widget.TextInputLayout>

                <ImageView xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/la_df_tp_img_add_category"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:rotation="45"
                    android:scaleType="center"
                    android:src="@drawable/ic_clear_black_24dp"
                    android:tint="@color/dividerColor"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>