<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/la_df_cp_img_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_clear_black_24dp"
                android:tint="@android:color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/la_df_cp_tv_toolbar_title"
                style="@style/CustomToolbarTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:text="@string/category"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:animateLayoutChanges="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/la_df_cp_img_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_check_black_24dp"
                    android:tint="@android:color/white"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/la_df_cp_img_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:tint="@android:color/white"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/la_df_cp_img_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_delete_24dp"
                    android:tint="@android:color/white"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"

        >

        <TextView
            style="@style/TinyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/select_category_type" />

        <Spinner
            android:id="@+id/la_df_cp_sp_ct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/la_df_cp_til_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/la_df_cp_tie_category"
                style="@style/NormalTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_type"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>